# python-starter

./: README.md  TDD_PROCESS.md  check  clean_start  fixup  main.py  pyproject.toml
scripts/: pre-commit
