[project]
name = "livecoding-te"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pyupgrade>=3.21.1",
    "ruff>=0.14.4",
]

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "auto"
